fixed menu hover, search on mobile and added transition effects

--- a/css/style.css
+++ b/css/style.css
@@ -29,10 +29,11 @@ li a {
 }
 
 
- li a:hover {
+li a:hover {
     color: black;
     padding: 13px 3px 13px 3px;
     background-color: yellow;
+    transition: 200ms ease;
 }
 
 
@@ -70,21 +71,14 @@ section .image {
     font-size: 1.3em;
 }
 
-.details {
+
+.slogan a {
+    padding: 1% 1%;
     margin: 5px auto;
-    padding: 1% 0;
     width: 30%;
-    height: 10%;
     background-color: yellow;
-    color: black;
     text-align: center;
-}
-
-.details:hover {
-    background-color: white;
-}
-
-.details a {
+    display: block;
     color: black;
     font-weight: bold;
     font-size: 1.2em;
@@ -99,7 +93,7 @@ section .image {
 
 .search {
     width: 100%;
-    height: 20vh;
+    height: fit-content;
     background-color: #121315;
     text-align: center;
     padding-top: 1%;
@@ -108,29 +102,36 @@ section .image {
 }
 
 .search h2 {
-    /* font-size: 5vw; */
     text-align: center;
     margin: 0.2% 0;
 }
 
+form{
+    /* justify-self: c; */
+}
+
 .search select,
+
 input {
     width: 15%;
     height: 25px;
     margin-top: 5px;
     border-radius: 5px;
+    outline: none;
     text-align: left;
     font-size: 0.4;
     border: 1px solid #9f0000;
+    outline: none;
 }
 
 .search button {
     width: 10%;
-    height: 28px;
+    padding: 1px 10px 3px 10px;
     background-color: #00ecff;
     border: none;
     color: white;
-    font-size: 0.6em;
+    font-size: 0.8em;
+    transition: 200ms ease;
 }
 
 .search button:hover {
@@ -161,6 +162,7 @@ input {
     transform: translate(-50%, -50%);
     text-align: center;
 }
+
 .warper img {
     width: 35%;
     opacity: 0.5;
@@ -227,7 +229,7 @@ input {
     transition: opacity 0.25s;
 }
 
-.image_overlay > * {
+.image_overlay>* {
     transform: translate(20px);
     transition: transform 0.25s;
 }
@@ -235,7 +237,8 @@ input {
 .image_overlay:hover {
     opacity: 1;
 }
-.image_overlay:hover > * {
+
+.image_overlay:hover>* {
     transform: translateY(0);
 }
 
@@ -420,6 +423,8 @@ input {
 
 .social img {
     padding: 30px 20px;
+    transition-duration: 500ms;
+
 }
 
 .social img:hover {
@@ -432,6 +437,7 @@ input {
     padding-top: 30px;
     width: 17vw;
     height: 17vh;
+    transition-duration: 500ms;
 }
 
 .insta img:hover {
@@ -474,6 +480,7 @@ footer button {
     background: yellow;
     border: none;
 }
+
 footer button:hover {
     background: white;
     color: black;
@@ -508,7 +515,6 @@ footer button:hover {
     text-align: center;
 }
 
-/* Mobile version */
 
 /* Top navigacija */
 
@@ -528,6 +534,7 @@ footer button:hover {
         z-index: 10000;
         height: 0;
     }
+
     nav ul.open {
         height: auto;
     }
@@ -550,12 +557,12 @@ footer button:hover {
 
     ul li:hover {
         color: #fff;
-        padding: 12px;
         background-color: rgb(65, 65, 58);
     }
 
     nav ul li a:hover {
         color: #fff;
+        padding: 15px;
         background-color: rgb(65, 65, 58);
     }
 
@@ -650,54 +657,82 @@ footer button:hover {
     }
 }
 
+/* Mobile version */
+
 @media screen and (max-width: 768px) {
-   
+
     /* Sekcija 1 slika i slogan */
- 
+
     section .image {
         height: 450px;
         position: relative;
     }
- 
+
     .slogan {
         width: 100%;
     }
- 
+
     .details {
-       
+
         font-size: 0.7em;
-       
+
     }
- 
- 
+
+
     /* Main page search */
- 
-    .search button {
-        height: 27px;
-        vertical-align: middle;
-        font-size: 0.3em;
+
+    form {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+
     }
- 
- 
+
+    .search select,
+
+    input {
+        width: 70%;
+        height: 25px;
+        /* margin-top: 5px; */
+        border-radius: 5px;
+        outline: none;
+        text-align: center;
+        font-size: 0.4;
+        border: 1px solid #9f0000;
+        outline: none;
+    }
+
+
+
+    .search button {
+        width: 50%;
+        padding: 0px 10px;
+        margin-top: 5px;
+        vertical-align: middle;
+        font-size: 0.6em;
+    }
+
+
     /* middle part, image, boxes */
- 
+
     .promo {
         margin: 10px auto;
         width: 80vw;
     }
- 
- 
- 
+
+
+
     /* Featured destinations */
- 
+
     .topDestinations {
         font-size: 1.8em;
     }
- 
- 
- 
+
+
+
     /* About Us */
- 
+
     .world {
         display: inline-block;
         width: 85vw;
@@ -706,60 +741,60 @@ footer button:hover {
         left: 50%;
         transform: translate(-50%, -50%);
     }
- 
+
     .travel .warpedImg {
         display: none;
     }
- 
+
     .team {
         display: flex;
         flex-direction: column;
         padding-bottom: 10px;
     }
- 
+
     .team div {
         padding-top: 20px;
     }
- 
+
     .team p {
         font-style: italic;
         padding-bottom: 8vh;
     }
- 
+
     .aboutTeam h2 {
         font-size: 1.3em;
     }
- 
+
     /* Travel Tips */
- 
+
     .tips {
-  
+
         flex-direction: column;
     }
- 
+
     /* Join US, Social Media */
- 
+
     .join {
         font-size: 1.6em;
     }
- 
+
     .join p {
         width: 60%;
-    
+
     }
- 
+
     .social img {
         padding: 30px 10px;
     }
- 
+
     .insta img {
         width: 18%;
         height: 10vh;
     }
- 
+
     /* Footer, sign up, contact */
- 
+
     .newsletter label {
         width: 80%;
     }
- }
+}
